# C-Tester

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHECKER_MANAGER_PLAN.md  CreateExcel.py  NOTICE  Process.py  README.md  ROBUST_GRADING_PLAN.md  Utils.py  checker_assistant.py  checker_config.json  clear_utils.py  configuration.py  final_grades.xlsx  gui.py  main.py  preprocess.py  pyproject.toml  requirements.txt  semantic_grading.py  submit_error.txt  test_checker_assistant.py  test_create_excel.py  test_dummy_homework_verification.py  test_semantic_grading.py
Q1/: Q1_grades_to_upload.xlsx  input.txt  original_sol.c  original_sol_output.txt
Q1/C/: 1123.c  (+3 more)
Q2/: Q2_grades_to_upload.xlsx  input.txt  original_sol.c
Q3/: Q3_grades_to_upload.xlsx  input.txt  original_sol.c
c_tester/: __init__.py  __main__.py  checker_assistant.py  checker_calibration.py  checker_variants.py  clear_utils.py  cli.py  compile_repair.py  configuration.py  create_excel.py  gui.py  llm_eval.py  output_contract.py  post_scoring_review.py  preprocess.py  process.py  semantic_grading.py  structural_analysis.py  verification.py  workflow_status.py
docs/: privacy_history_scrub.md
tests/: test_checker_assistant.py  test_checker_calibration.py  test_compile_repair.py  test_configuration.py  test_create_excel.py  test_dummy_homework_verification.py  test_grading_modes.py  test_gui_compile_repair_flow.py  test_gui_setup_assistant_flow.py  test_llm_eval.py  test_output_contract.py  test_post_scoring_review.py  test_preprocess.py  test_process_compile_repair.py  test_process_environment.py  (+3 more)
(+38 files in other folders)
